generated/checkers/refine/KN-Integer-Overflow-768f17fd-0/build_logs/syntax-repair-refine-1-3/build_stderr_1.log
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: error: specialization of ‘template<class T> struct clang::ento::ProgramStateTrait’ in different namespace [-fpermissive]
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: note: in definition of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:44:1: note: in expansion of macro ‘REGISTER_MAP_WITH_PROGRAMSTATE’
   44 | REGISTER_MAP_WITH_PROGRAMSTATE(VarUpperBoundMap, const VarDecl *, llvm::APSInt)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:51:30: note:   from definition of ‘template<class T> struct clang::ento::ProgramStateTrait’
   51 | template <typename T> struct ProgramStateTrait {
      |                              ^~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: error: explicit specialization of ‘template<class T> struct clang::ento::ProgramStateTrait’ outside its namespace must use a nested-name-specifier [-fpermissive]
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:42:10: note: in definition of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   42 |   struct ProgramStateTrait<Name> : public ProgramStatePartialTrait<Name##Ty> { \
      |          ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:44:1: note: in expansion of macro ‘REGISTER_MAP_WITH_PROGRAMSTATE’
   44 | REGISTER_MAP_WITH_PROGRAMSTATE(VarUpperBoundMap, const VarDecl *, llvm::APSInt)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:43:27: error: definition of ‘static void* clang::ento::ProgramStateTrait<{anonymous}::{anonymous}::VarUpperBoundMap>::GDMIndex()’ is not in namespace enclosing ‘clang::ento::ProgramStateTrait<{anonymous}::{anonymous}::VarUpperBoundMap>’ [-fpermissive]
   43 |     static void *GDMIndex() {                                                  \
      |                           ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramStateTrait.h:88:5: note: in expansion of macro ‘REGISTER_TRAIT_WITH_PROGRAMSTATE’
   88 |     REGISTER_TRAIT_WITH_PROGRAMSTATE(Name, \
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:44:1: note: in expansion of macro ‘REGISTER_MAP_WITH_PROGRAMSTATE’
   44 | REGISTER_MAP_WITH_PROGRAMSTATE(VarUpperBoundMap, const VarDecl *, llvm::APSInt)
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::computeExprUpperBound(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:299:9: error: ‘Optional’ was not declared in this scope; did you mean ‘clang::ObjCImplementationControl::Optional’?
  299 |     if (Optional<nonloc::ConcreteInt> CI = SV.getAs<nonloc::ConcreteInt>()) {
      |         ^~~~~~~~
      |         clang::ObjCImplementationControl::Optional
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/ExprObjC.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/CFG.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/DeclObjC.h:118:56: note: ‘clang::ObjCImplementationControl::Optional’ declared here
  118 | enum class ObjCImplementationControl { None, Required, Optional };
      |                                                        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:299:37: error: expected primary-expression before ‘>’ token
  299 |     if (Optional<nonloc::ConcreteInt> CI = SV.getAs<nonloc::ConcreteInt>()) {
      |                                     ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:299:39: error: ‘CI’ was not declared in this scope; did you mean ‘C’?
  299 |     if (Optional<nonloc::ConcreteInt> CI = SV.getAs<nonloc::ConcreteInt>()) {
      |                                       ^~
      |                                       C
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:324:47: error: conversion from ‘int64_t’ {aka ‘long int’} to non-scalar type ‘llvm::APInt’ requested
  324 |           llvm::APInt Sum = LUB.getExtValue() + RUB.getExtValue();
      |                             ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
